2007-04-19  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Oops, we need to use the ClientRect not the
	bounds here.

2007-04-18  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: In ItemControl.ItemsMouseDown, take into
	account the double clicks when CheckBoxes are used and
	the pointer is inside the checkbox. Fixes part of #81191.

2007-04-18  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Pressing the end key shouldn't move the caret
	past the line ending.
	* TextBoxBase.cs: We can still delete if we are in the line
	ending and the combine will just kill the existing line ending.

2007-04-18  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: We can't move lines, then invalidate their
	bounds, we need to get the old bounds and combine that with the
	new bounds.
	* TextBoxBase.cs: Before combining two lines for a delete, we need
	to invalidate the area of the old line, since that will be moved
	in the combine operation.

2007-04-18  Everaldo Canuto  <everaldo@simios.org>

	* LinkLabel.cs: In OnPaint invoke draw background to fix problems
	with transparent background. Fixes #80482.

2007-04-18  Jonathan Pobst  <monkey@jpobst.com>

	* PictureBox.cs: Refresh on resize when SizeMode = Zoom.
	* ThemeWin32Classic.cs: Implement PictureBox.SizeMode = Zoom.
	[Fixes bug #81391]

2007-04-18  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* CreateParams.cs: Add a couple of helper methods and do a less string
	  concatenation in ToString.
	* XplatUIX11.cs: Add an TranslateClientRectangleToXClientRectangle
	  overload that takes a Control parameter, since this method may be
	  called before a control is assigned to the hwnd (from
	  CreateWindow), and update CreateWindow to use the new overload. In
	  GetMenuOrigin subtract the title bar from the y position if the
	  form has a window manager (since we're painting it and not X).
	* XplatUIWin32.cs: If we can get a form in GetMenuOrigin use the form's