@@ -1,3 +1,10 @@
+2007-04-19  Jonathan Pobst  <monkey@jpobst.com>
+
+	* Control.cs: Respect DefaultPadding.
+	* GroupBox.cs: Implement DefaultPadding, DisplayRectangle takes
+	padding into account.
+	* ToolStrip.cs: Remove setting padding to DefaultPadding in constructor.	
+
 2007-04-19  Jackson Harper  <jackson@ximian.com>
 
 	* TextControl.cs: Oops, we need to use the ClientRect not the
